--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,14 +7,14 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = "0.2.0-alpha.2"
-telegram-bot = { git = "https://github.com/jxs/telegram-bot/", branch = "rustls"}
-hyper = "=0.13.0-alpha.1"
-futures-preview = "=0.3.0-alpha.18"
+tokio = "0.2.0-alpha.6"
+telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot/" }
+hyper = "0.13.0-alpha.4"
+futures-preview = "=0.3.0-alpha.19"
 env_logger = "0.6.2"
 log = "0.4.8"
 serde = { version = "1.0", features = ["derive"] }
 serde-xml-rs = "0.3.1"
 failure = "0.1.5"
 urlencoding = "1.0.0"
-hyper-rustls = "=0.18.0-alpha.1"
+hyper-rustls = "0.18.0-alpha.2"
